Закончена работа над 1-ой лабораторной

--- a/Model/ConsoleLoader/ConsoleLoader.csproj
+++ b/Model/ConsoleLoader/ConsoleLoader.csproj
@@ -48,5 +48,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{ba40a134-7d36-43a0-a444-1943df817776}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
