--- a/Model/View/View.csproj
+++ b/Model/View/View.csproj
@@ -45,14 +45,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="AddObjectForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="AddObjectForm.Designer.cs">
+      <DependentUpon>AddObjectForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CalculationCoordinatesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CalculationCoordinatesForm.Designer.cs">
+      <DependentUpon>CalculationCoordinatesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AddObjectForm.resx">
+      <DependentUpon>AddObjectForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CalculationCoordinatesForm.resx">
+      <DependentUpon>CalculationCoordinatesForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,6 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{ba40a134-7d36-43a0-a444-1943df817776}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
