--- a/Model/View/View.csproj
+++ b/Model/View/View.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddObjectForm.cs">
+    <Compile Include="MovementForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddObjectForm.Designer.cs">
-      <DependentUpon>AddObjectForm.cs</DependentUpon>
+    <Compile Include="MovementForm.Designer.cs">
+      <DependentUpon>MovementForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CalculationCoordinatesForm.cs">
       <SubType>Form</SubType>
@@ -59,14 +60,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SearchForm.Designer.cs">
-      <DependentUpon>SearchForm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="AddObjectForm.resx">
-      <DependentUpon>AddObjectForm.cs</DependentUpon>
+    <EmbeddedResource Include="MovementForm.resx">
+      <DependentUpon>MovementForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CalculationCoordinatesForm.resx">
       <DependentUpon>CalculationCoordinatesForm.cs</DependentUpon>
@@ -80,9 +75,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="SearchForm.resx">
-      <DependentUpon>SearchForm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
