Изменен файл gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ Model/ConsoleLoader/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5
 Model/ConsoleLoader/obj/Debug/
 Model/Model/obj/Debug/
 Model/ConsoleLoader/App.config
-Model/View/obj/Debug/
+Model/View/obj/
